# TinyEngine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  clear-keep-dependencies.bat  package-lock.json  package.json
.github/workflows/: release.yml  windows.yml
App/: CMakeLists.txt
App/src/: App.cpp
Test/: CMakeLists.txt  FileSystem_Test.cpp
TinyEngine/: CMakeLists.txt
TinyEngine/resources/raw/: cube.txt  cube_tex.txt  cube_tex_normals.txt
TinyEngine/shaders/: Flat.frag  Flat.vert  Light.frag  Phong.frag  Phong.vert  Texture.frag  Texture.vert
TinyEngine/src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Core.h  Event.h  FileSystem.cpp  FileSystem.h  IndexBuffer.cpp  IndexBuffer.h  Main.h  Material.cpp  Material.h  Material_Flat.cpp  Material_Flat.h  Material_Phong.cpp  Material_Phong.h  Material_Texture.cpp  Material_Texture.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Program.cpp  Program.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderElement.cpp  ShaderElement.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  Window.cpp  Window.h
application/: CMakeLists.txt
application/src/: App.cpp  Main.cpp
src/: ImportTest.h  MyLibrary.cpp  MyLibrary.h  MyOtherLibrary.cpp  MyOtherLibrary.h  TinyEngine.h
test/: CMakeLists.txt  FileSystem_Test.cpp  Init_Test.cpp  MyLibrary_Test.cpp  MyOtherLibrary_Test.cpp
